<resources>
    <string name="app_name">OrderSoft</string>
    <string name="login">Log In</string>
    <string name="Signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">Enter email or username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fb">Facebook</string>
    <string name="logo">OrderSoft</string>
    <string name="Profile">Profile</string>
    <string name="Order">Orders</string>
    <string name="Pay">Payments methods</string>
    <string name="Address">Addresses</string>
    <string name="Home">Home</string>
    <string name="btn_desc_flot">carrito</string>
    <string name="search">Search for a food item</string>
    <string name="categories">Categories</string>
    <string name="content_description_media">Categories</string>
    <string name="Burgers">Burgers</string>
    <string name="btn_back">atras</string>
    <string name="first_name">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="cc">Cedula</string>
    <string name="email">Email</string>
    <string name="phone">Celular</string>
    <string name="save">Guardar</string>
    <string name="add_cart">Add to cart</string>
</resources>