<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.ProfileActivity">
    <LinearLayout
        android:id="@+id/content_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/ic_baseline_chevron_left_24"
            android:background="@color/gray_fondo2"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"/>
    </LinearLayout>
    <EditText
        android:id="@+id/txt_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/content_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/txt_cc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/cc"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/txt_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_cc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".85"
        android:text="@string/save"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btn"
        />
</androidx.constraintlayout.widget.ConstraintLayout>